# f1-fantasy

./: .gitignore  README.md  f1_fantasy.py  f1data.py  main.py  pyproject.toml  random_f1.py  requirements.txt  ruff.toml
src/: f1data.py  main.py
