[tool.poetry]
name = "f1-fantasy"
version = "0.1.0"
description = ""
authors = ["Tom Sureck <tom.sureck@t-online.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^6.1.4"
oauth2client = "^4.1.3"
fastf1 = "^3.4.1"
ruff = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# maximum line length
line-length = 120